--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Minimal number system",
   "main": "test.js",
   "scripts": {
+    "mytest": "mocha mytest.js",
     "test": "mocha test.js"
   },
   "repository": {
